# adaptive-temporal-horizon

./: .gitignore  README.md  config.toml  pyproject.toml  requirements.txt
adaptive_horizon/: adaptive_methods.py  config.py  training_modes.py  utils.py
adaptive_horizon/analysis/: compute_gradient_heatmap.py  compute_lyapunov.py  inspect_model.py
adaptive_horizon/data/: adaptive_dataset.py  dataset.py  utils.py
adaptive_horizon/dynamics/: integrators.py  lorenz.py  lyapunov.py  rossler.py  systems.py
adaptive_horizon/evaluation/: budget_benchmark.py  compute_budget_comparison.py  cross_validation.py  cross_validation_catalog.py  evaluate.py  gradient_scaling.py  utils.py
adaptive_horizon/model/: dense_block.py  horizon_scheduler.py  mlp.py  residual_block.py
adaptive_horizon/training/: aggregate.py  evaluate.py  loss.py  methods.py  run_utils.py  schedules.py  setup.py  train.py  train_adaptive.py  utils.py  validation.py
adaptive_horizon/visualization/: plot_budget_resources.py  plot_crossings.py  plotting.py
src/: compute_lle.py  evaluate.py  lorenz.py  lorenz_mlp.py  mlp.py  train.py  utils.py
src/data/: dataset.py  lorenz.py
src/model/: lorenz.py  mlp.py  residual_block.py
src/numerics/: global_lyapunov.py  integrators.py  local_lyapunov.py
src/scripts/: compute_lyapunov_exponents.py
tests/: test_compute_gradient_heatmap.py  test_compute_lyapunov.py  test_cross_validation_dt.py  test_dynamics_systems.py  test_training_budget.py
